--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">MeetingRecorder</string>
     <string name="create_new_record">Create new record?</string>
     <string name="create_new_record_dialog_fragment">DialogFragment</string>
+    <string name="record">Record</string>
+    <string name="play">Play</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
+    <string name="pause">Pause</string>
 </resources>
