--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="start">Start</string>
     <string name="save">Save</string>
     <string name="pause">Pause</string>
+    <string name="title">title</string>
 </resources>
