--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="save">Save</string>
     <string name="pause">Pause</string>
     <string name="title">title</string>
+    <string name="record">Record</string>
 </resources>
